Wed Nov 27 01:49:18 GMT 2002  Colin Watson  <cjwatson@debian.org>

	* release.sh: Don't pass --copy to autogen.sh, as it's a no-op now.
	* po/.cvsignore, tools/.cvsignore: More ignored files.

Wed Nov 27 01:46:27 GMT 2002  Colin Watson  <cjwatson@debian.org>

	* tools/mkinstalldirs: Remove. It's more trouble than it's worth to
	  store something in CVS that autopoint thinks it controls.

Wed Nov 27 01:25:52 GMT 2002  Colin Watson  <cjwatson@debian.org>

	* po/da.po: Correct some minor typographical mistakes (mostly
	  missing spaces or newlines at the end of one piece of a string
	  concatenation).
	* po/ca.po, po/cs.po, po/da.po, po/de.po, po/es.po, po/fr.po,
	  po/it.po, po/ja.po, po/pt_BR.po, po/sv.po: Update with msgmerge.

Wed Nov 27 00:51:47 GMT 2002  Colin Watson  <cjwatson@debian.org>

	* man/man1/apropos.man1, man/man1/lexgrog.man1, man/man1/man.man1,
	  man/man1/manpath.man1, man/man1/whatis.man1,
	  man/man1/zsoelim.man1, man/man5/manpath.man5,
	  man/man8/accessdb.man8, man/man8/catman.man8, man/man8/mandb.man8:
	  Add a .pc request so that the % characters we use for
	  substitutions don't get translated into page numbers when
	  formatting the unsubstituted pages.

Wed Nov 27 00:37:29 GMT 2002  Colin Watson  <cjwatson@debian.org>

	* man/man1/lexgrog.man1 (WHATIS PARSING): Add an example of how NAME
	  sections should be written in mdoc.

Tue Nov 26 22:57:27 GMT 2002  Colin Watson  <cjwatson@debian.org>

	* .cvsignore: Ignore the m4 directory, created by autopoint.
	* GNUmakefile.in (_subdirs, _m4): Add m4/*.m4 to the distribution.
	  (_root): There are no *.h files left in the top-level directory.
	  (nls_man): de_DE.ascii is gone.
	  (dist): Use 'cp -p' rather than 'ln', since ln notes that making a
	  hard link to a symbolic link is not portable.

Tue Nov 26 03:43:15 GMT 2002  Colin Watson  <cjwatson@debian.org>

	* po/pt_BR.po: New from Translation Project.
	* po/LINGUAS: Add pt_BR.
