@@ -1,3 +1,8 @@
+Wed Nov 27 02:29:42 GMT 2002  Colin Watson  <cjwatson@debian.org>
+
+	* src/lexgrog.l (find_name): Call ult_src() to resolve .so links.
+	* src/Makefile.in: Link ult_src.o into lexgrog.
+
 Wed Nov 27 01:49:18 GMT 2002  Colin Watson  <cjwatson@debian.org>
 
 	* release.sh: Don't pass --copy to autogen.sh, as it's a no-op now.
